versioned_docs/version-1.2.0/installation.mdx
---
title: Installation
sidebar_position: 1
---

import CardGrid from '@site/src/components/CardGrid/CardGrid';
import CodeBlock from '@theme/CodeBlock';

# Get started with Yumma CSS

Yumma CSS provides a set of utility classes and components to help you ship and build applications faster, whether you're designing static pages or dynamic components.

No need to set anything up, just install and off you go!

## Installation

Start building websites with Yumma CSS the way you want.

### Install via npm

Installing via [package manager](https://www.npmjs.com/package/yummacss):

```bash
npm install yummacss@1.2.0
```

Include the compiled CSS file in your `<head>` element

#### Standard

```html
<link rel="stylesheet" href="node_modules/yummacss/dist/yumma.css">
```
#### Minified

```html
<link rel="stylesheet" href="node_modules/yummacss/dist/yumma.min.css">
```

### Include via cdn

Including using [content delivery network](https://www.jsdelivr.com/package/npm/yummacss):

#### Standard

```html
<link href="https://cdn.jsdelivr.net/gh/yumma-lib/yumma-css@1.2.0/dist/yumma.css" rel="stylesheet" crossorigin="anonymous">
```

#### Minified

```html
<link href="https://cdn.jsdelivr.net/gh/yumma-lib/yumma-css@1.2.0/dist/yumma.min.css" rel="stylesheet" crossorigin="anonymous">
```

## What to do next?

Now that you've got Yumma CSS up and running, you can begin to play around with the utility classes or components.

<CardGrid
 cardData={[
    {
      icon: require('@site/static/img/illustrations/utility-first.png').default,
      title: 'Utility First',
      description: 'Advanced tiny utility classes that you can use on your applications.',
      href: '/docs/positioning/display'
    },
    {
      icon: require('@site/static/img/illustrations/customization.png').default,
      title: 'Customization',
      description: 'Personalize your components or pages using the color palette.',
      href: '/docs/fundamentals/design-system/colors'
    },
    {
      icon: require('@site/static/img/illustrations/components.png').default,
      title: 'Components',
      description: 'Personalize your components or pages using the color palette.',
      href: '/components'
    }
 ]}
/>